versioned_docs/version-1.5/danksearch/installation.mdx
---
title: Installation
description: Install DankSearch application launcher
sidebar_position: 2
---

import Hero from '@site/src/components/Hero';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

<Hero
  asciiArt={`██████╗ ███████╗███████╗ █████╗ ██████╗  ██████╗██╗  ██╗
██╔══██╗██╔════╝██╔════╝██╔══██╗██╔══██╗██╔════╝██║  ██║
██║  ██║███████╗█████╗  ███████║██████╔╝██║     ███████║
██║  ██║╚════██║██╔══╝  ██╔══██║██╔══██╗██║     ██╔══██║
██████╔╝███████║███████╗██║  ██║██║  ██║╚██████╗██║  ██║
╚═════╝ ╚══════╝╚══════╝╚═╝  ╚═╝╚═╝  ╚═╝ ╚═════╝╚═╝  ╚═╝
                                                        `}
/>

# DankSearch Installation

`dsearch` has zero dependencies and compiles to a single static binary.

:::tip[NixOS Users]
If you're using NixOS, see the dedicated [NixOS Installation guides](nixos-flake) for declarative installation with flakes or native nixpkgs modules.
:::

## Installation Methods

Choose the installation method that best fits your system:

### NixOS

For NixOS users, we recommend using the declarative installation methods:

- **[NixOS Module](nixos)** - **Recommended** for NixOS 26.05+ using nixpkgs stable
- **[Flake Installation (home-manager)](nixos-flake)** - Use for per-user installs or quicker updates

### Distribution Packages

### Arch & Derivatives

<Tabs>
<TabItem value="stable" label="Stable Release" default>

```bash
paru -S dsearch-bin
```

</TabItem>
<TabItem value="git" label="Latest Development Build">

```bash
paru -S dsearch-git
```

</TabItem>
</Tabs>

### Fedora & CentOS

```bash
sudo dnf copr enable avengemedia/danklinux
sudo dnf install dsearch
```

### Debian & Ubuntu

#### Debian

Packages are published on OBS for **Debian 13 (Trixie)**, **Debian Testing**, and **Debian Sid**.

Select your release:

<Tabs groupId="debian-release">
<TabItem value="trixie" label="Debian 13 (Trixie)" default>

```bash
curl -fsSL https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/Debian_13/Release.key | \
  sudo gpg --dearmor -o /etc/apt/keyrings/danklinux.gpg
echo "deb [signed-by=/etc/apt/keyrings/danklinux.gpg] https://download.opensuse.org/repositories/home:/AvengeMedia:/danklinux/Debian_13/ /" | \
  sudo tee /etc/apt/sources.list.d/danklinux.list
sudo apt update
sudo apt install dsearch
```

</TabItem>
<TabItem value="testing" label="Debian Testing">

```bash
curl -fsSL https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/Debian_Testing/Release.key | \
  sudo gpg --dearmor -o /etc/apt/keyrings/danklinux.gpg
echo "deb [signed-by=/etc/apt/keyrings/danklinux.gpg] https://download.opensuse.org/repositories/home:/AvengeMedia:/danklinux/Debian_Testing/ /" | \
  sudo tee /etc/apt/sources.list.d/danklinux.list
sudo apt update
sudo apt install dsearch
```

</TabItem>
<TabItem value="sid" label="Debian Sid">

```bash
curl -fsSL https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/Debian_Unstable/Release.key | \
  sudo gpg --dearmor -o /etc/apt/keyrings/danklinux.gpg
echo "deb [signed-by=/etc/apt/keyrings/danklinux.gpg] https://download.opensuse.org/repositories/home:/AvengeMedia:/danklinux/Debian_Unstable/ /" | \
  sudo tee /etc/apt/sources.list.d/danklinux.list
sudo apt update
sudo apt install dsearch
```

</TabItem>
</Tabs>

#### Ubuntu

Ubuntu 26.04 LTS+ (Resolute Raccoon) is supported via Launchpad PPA.

```bash
sudo add-apt-repository ppa:avengemedia/danklinux
sudo apt update
sudo apt install dsearch
```

### openSUSE & Derivatives

DankSearch is available through the Open Build Service (OBS) for OpenSUSE Tumbleweed, Leap 16/16.1, and Slowroll.

Select your distribution:

<Tabs groupId="opensuse-distro">
<TabItem value="tumbleweed" label="Tumbleweed" default>

```bash
sudo zypper addrepo https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/openSUSE_Tumbleweed/home:AvengeMedia:danklinux.repo
sudo zypper refresh
sudo zypper install dsearch
```

</TabItem>
<TabItem value="leap16" label="Leap 16">

```bash
sudo zypper addrepo https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/16.0/home:AvengeMedia:danklinux.repo
sudo zypper refresh
sudo zypper install dsearch
```

</TabItem>
<TabItem value="leap161" label="Leap 16.1">

```bash
sudo zypper addrepo https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/16.1/home:AvengeMedia:danklinux.repo
sudo zypper refresh
sudo zypper install dsearch
```

</TabItem>
<TabItem value="slowroll" label="Slowroll">

```bash
sudo zypper addrepo https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/openSUSE_Slowroll/home:AvengeMedia:danklinux.repo
sudo zypper refresh
sudo zypper install dsearch
```

</TabItem>
</Tabs>

### Void Linux

:::note

Install DankSearch from our R2-backed XBPS repository or build it from source.

:::

:::warning[Repository migration]

Replace the old URL in your existing repository file:

```bash
sudo sed -i 's|https://avengemedia.github.io/DankLinux/current|https://void.danklinux.com/danklinux/current|' /etc/xbps.d/danklinux.conf
```

The frozen GitHub Pages repository no longer receives updates and will be
retired after **July 24, 2026 at 22:27 UTC**.

:::

<Tabs groupId="void-install-method">
<TabItem value="repo" label="DankLinux Repository" default>

```bash
echo "repository=https://void.danklinux.com/danklinux/current" | sudo tee /etc/xbps.d/danklinux.conf
sudo xbps-install -Su
sudo xbps-install -S danksearch
```

:::note

On the first sync, `xbps-install` will output our signing key fingerprint and ask you to type `y` to trust and import it. Verify that the key matches our official signing fingerprint.

:::

</TabItem>
<TabItem value="source" label="Build from Source">

If you prefer to build from source using `xbps-src`:

```bash
# Set up the Void packages tree (one time)
git clone --depth 1 https://github.com/void-linux/void-packages.git
cd void-packages
./xbps-src binary-bootstrap

# Copy in the templates (adjust paths as needed)
cp -R ../DankLinux/distro/void/srcpkgs/danksearch* srcpkgs/

# Build the package
./xbps-src pkg danksearch

# Install the results
sudo xbps-install --repository=hostdir/binpkgs danksearch
```

</TabItem>
</Tabs>

### Gentoo

`gui-apps/danksearch` is available in the official [guru](https://wiki.gentoo.org/wiki/Project:GURU) community overlay.

```bash
sudo eselect repository enable guru
sudo emaint sync -r guru
sudo emerge --ask gui-apps/danksearch
```

:::note

The guru overlay package is keyworded `~amd64`, so you may need to accept the testing keyword:

```bash
echo "gui-apps/danksearch ~amd64" | sudo tee -a /etc/portage/package.accept_keywords/danksearch
```

:::

Distribution packages include the systemd user service. Enable it for automatic index updates:

```bash
systemctl --user enable --now dsearch
```

### Pre-built Binaries

Download the latest release for your architecture:

```bash
# Download and install
wget https://github.com/AvengeMedia/danksearch/releases/latest/download/dsearch-linux-amd64.gz
gunzip dsearch-linux-amd64.gz
chmod +x dsearch-linux-amd64
sudo mv dsearch-linux-amd64 /usr/local/bin/dsearch
```

Install and enable the systemd user service for automatic index updates:

```bash
mkdir -p ~/.config/systemd/user
wget https://raw.githubusercontent.com/AvengeMedia/danksearch/refs/heads/master/assets/dsearch.service -O ~/.config/systemd/user/dsearch.service
systemctl --user enable --now dsearch
```

The service runs the API server with file watching, automatically updating the index when files change.

### From Source

Requirements: Go 1.24+

```bash
git clone https://github.com/AvengeMedia/danksearch
cd danksearch
make
sudo make install
make install-service
systemctl --user enable --now dsearch
```

## Verification

Test the installation:

```bash
# Check version
dsearch version

# Build initial index
dsearch index generate
```

## System Requirements

- **Operating System**: Unix-based, compatible with most Unix-based operating systems (Linux, MacOS, BSD)
- **Go Version**: 1.24+ (for building from source)

## Integration with DMS

:::tip

DankMaterialShell users can initiate filesystem search by typing `/` in the launcher when dsearch is installed.

:::

## Next Steps

- [Configuration](configuration) - Configure dsearch
- [Usage](usage) - Learn CLI commands and API usage
